syntax = "proto3";

option csharp_namespace = "Sr.Grpc.gen";

package event;

enum EventType {
    BATTLE = 0;
    DEBATES = 1;
    DUNGEON = 2;
    FESTIVAL = 3;
}

message SubscriptionType{
  EventType eventType = 1;
  string description = 2;
  int32 minimumLevel = 3;
  int32 maximumLevel = 4;
  repeated string fractions = 5;
}

message EventInfo{
  SubscriptionType type = 1;
  bool accessible = 2;
  repeated string interestedInYou = 3;
}

service EventSubscription {
  rpc 
}